--- a/manifest.json
+++ b/manifest.json
@@ -2,20 +2,20 @@
     "name": "Prosperus Club",
     "short_name": "Prosperus",
     "description": "Plataforma exclusiva para membros do Prosperus Club",
-    "start_url": "/",
+    "start_url": "/app/",
     "display": "standalone",
     "background_color": "#0f172a",
     "theme_color": "#0f172a",
     "orientation": "portrait-primary",
     "icons": [
         {
-            "src": "/icon-192.png",
+            "src": "/app/icon-192.png",
             "sizes": "192x192",
             "type": "image/png",
             "purpose": "any maskable"
         },
         {
-            "src": "/icon-512.png",
+            "src": "/app/icon-512.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "any maskable"
