--- a/manifest.json
+++ b/manifest.json
@@ -3,19 +3,20 @@
     "short_name": "Prosperus",
     "description": "Plataforma exclusiva para membros do Prosperus Club",
     "start_url": "/app/",
+    "scope": "/app/",
     "display": "standalone",
     "background_color": "#0f172a",
     "theme_color": "#0f172a",
     "orientation": "portrait-primary",
     "icons": [
         {
-            "src": "/app/icon-192.png",
-            "sizes": "192x192",
-            "type": "image/png",
-            "purpose": "any maskable"
+            "src": "/app/default-avatar.svg",
+            "sizes": "any",
+            "type": "image/svg+xml",
+            "purpose": "any"
         },
         {
-            "src": "/app/icon-512.png",
+            "src": "/app/prosperus-icon-admin.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "any maskable"
