Acerto no Esqueci minha senha

--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,10 @@
     "start_url": "/app/",
     "scope": "/app/",
     "display": "standalone",
+    "display_override": [
+        "standalone",
+        "minimal-ui"
+    ],
     "background_color": "#0f172a",
     "theme_color": "#0f172a",
     "orientation": "portrait-primary",
