--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^5.2.2",
     "@supabase/auth-helpers-nextjs": "^0.15.0",
     "@tailwindcss/vite": "^4.1.18",
+    "@use-gesture/react": "^10.3.1",
     "date-fns": "2.30.0",
     "lucide-react": "0.294.0",
     "react": "18.2.0",
