--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,26 @@
-# Supabase Configuration
-VITE_SUPABASE_URL=https://your-project.supabase.co
-VITE_SUPABASE_ANON_KEY=your-anon-key-here
+# ─── FRONTEND (Vite bundle — dados públicos apenas) ──────────────
+# Obtido em: Supabase Dashboard → Settings → API
+VITE_SUPABASE_URL=https://[PROJECT_REF].supabase.co
+VITE_SUPABASE_ANON_KEY=eyJ[ANON_KEY]
 
-# Service Role Key (server-side only — NEVER expose in frontend)
-# Required only for seed scripts (supabase/seed-admin.ts)
-SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
+# Obtido em: npx web-push generate-vapid-keys (chave PÚBLICA)
+VITE_VAPID_PUBLIC_KEY=BFS8[VAPID_PUBLIC_KEY]
 
-# HubSpot Integration
-VITE_HUBSPOT_WEBHOOK_SECRET=your-hubspot-webhook-secret
-HUBSPOT_API_KEY=your-hubspot-api-key
+# URL pública da galeria de fotos
+VITE_GALLERY_URL=https://photos.app.goo.gl/[ALBUM_ID]
 
-# Gallery URL
-VITE_GALLERY_URL=https://photos.app.goo.gl/your-gallery
+# ─── SERVER-SIDE LOCAL (nunca commitar com valores reais) ─────────
+# Obtido em: Supabase Dashboard → Settings → API → Service Role Key
+# Usado apenas localmente para seed scripts
+SUPABASE_SERVICE_ROLE_KEY=eyJ[SERVICE_ROLE_KEY]
 
-# Push Notifications - VAPID Keys
-# Public Key (exposed in frontend via VITE_ prefix)
-VITE_VAPID_PUBLIC_KEY=your-vapid-public-key
-
-# Public Key (for Edge Functions — set via Supabase Secrets)
-VAPID_PUBLIC_KEY=your-vapid-public-key
-
-# Private Key (NEVER expose in frontend — set via Supabase Secrets only)
-VAPID_PRIVATE_KEY=your-vapid-private-key
+# ─── SUPABASE SECRETS (configurar no Dashboard, NÃO aqui) ────────
+# Supabase Dashboard → Settings → Edge Functions → Secrets
+#
+# HUBSPOT_ACCESS_TOKEN=     ← HubSpot → Private Apps → Access Token
+# HUBSPOT_CLIENT_SECRET=    ← HubSpot → Private Apps → Client Secret
+# VAPID_PRIVATE_KEY=        ← npx web-push generate-vapid-keys
+# VAPID_PUBLIC_KEY=         ← mesma public key do VITE_VAPID_PUBLIC_KEY
+# APP_URL=                  ← https://app.prosperusclub.com.br
+# SUPABASE_URL=             ← automático nas Edge Functions
+# SUPABASE_SERVICE_ROLE_KEY= ← automático nas Edge Functions
